@@ -1,8 +1,0 @@
-# $Id$
-
-JAVA_FILES = *.java
-
-RESOURCE_FILES = \
-	*.html *.jwc *.properties *.script
-
-include $(SYS_MAKEFILE_DIR)/Package.mk
