@@ -1,3 +1,7 @@
+* Jun 12 2001 hship
+
+Adjust for changes in JBE (concerning cataloging).
+
 * Jun 7 hship
 
 [431135] Shell refresh problem
